fix cookie consent z-index

--- a/app/cells/folio/cookie_consent/cookie_consent.sass
+++ b/app/cells/folio/cookie_consent/cookie_consent.sass
@@ -23,6 +23,7 @@
   left: 0
   width: 100%
   min-width: 320px
+  z-index: 999
 
 @media screen and (max-width: breakpoint-max(xs))
   .cc-compliance, .cc-link
